--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="dark_red">#c52a39</color>
+    <color name="red">#f33446</color>
+    <color name="green">#58a958</color>
+    <color name="blue">#2196f3</color>
+
 </resources>
