layout for dialog box is ready

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,5 +11,6 @@
     <color name="red">#f33446</color>
     <color name="green">#58a958</color>
     <color name="blue">#2196f3</color>
+    <color name="black_light">#353131</color>
 
 </resources>
