new scenario for editing added - new interface added to connect the adapter and the activity - sync dark theme colors with the main colors

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
         android:layout_marginBottom="20dp"
         android:clickable="true"
         android:contentDescription="@string/remove"
+        android:visibility="gone"
         app:backgroundTint="@color/blue"
         app:fabCustomSize="60dp"
         app:layout_constraintBottom_toTopOf="@+id/addFloatingBtn"
