--- a/app/src/main/res/layout/custom_task.xml
+++ b/app/src/main/res/layout/custom_task.xml
@@ -65,4 +65,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/taskNameHigh" />
 
+    <ImageView
+        android:id="@+id/edit"
+        android:layout_width="32dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="14dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="9dp"
+        app:layout_constraintBottom_toTopOf="@+id/view"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_baseline_edit_24"
+        android:contentDescription="@string/edit" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
