--- a/app/src/main/res/layout/update_dialog.xml
+++ b/app/src/main/res/layout/update_dialog.xml
@@ -6,34 +6,18 @@
     android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/boxLow"
-        android:layout_width="20dp"
+        android:id="@+id/tvEditTask"
+        style="@style/main_text"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="15dp"
-        android:background="@drawable/green_radius_bg"
-        app:layout_constraintStart_toEndOf="@+id/boxMedium"
-        app:layout_constraintTop_toBottomOf="@+id/tvPriority" />
-
-    <TextView
-        android:id="@+id/boxMedium"
-        android:layout_width="20dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="15dp"
-        android:background="@drawable/blue_radius_bg"
-        app:layout_constraintStart_toEndOf="@+id/boxHigh"
-        app:layout_constraintTop_toBottomOf="@+id/tvPriority" />
-
-    <TextView
-        android:id="@+id/tvAddTask"
-        android:text="@string/add_task"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="30dp"
+        android:text="@string/edit_task"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        style="@style/main_text" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/etTitle"
+        android:id="@+id/etTitleEdit"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
@@ -46,10 +30,10 @@
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvAddTask" />
+        app:layout_constraintTop_toBottomOf="@+id/tvEditTask" />
 
     <TextView
-        android:id="@+id/tvPriority"
+        android:id="@+id/tvPriorityEdit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
@@ -57,7 +41,37 @@
         android:text="@string/priority"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etTitle" />
+        app:layout_constraintTop_toBottomOf="@+id/etTitleEdit" />
+
+    <TextView
+        android:id="@+id/boxHighEdit"
+        android:layout_width="20dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="15dp"
+        android:background="@drawable/red_radius_bg"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvPriorityEdit" />
+
+    <TextView
+        android:id="@+id/boxMediumEdit"
+        android:layout_width="20dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="15dp"
+        android:background="@drawable/blue_radius_bg"
+        app:layout_constraintStart_toEndOf="@+id/boxHighEdit"
+        app:layout_constraintTop_toBottomOf="@+id/tvPriorityEdit" />
+
+    <TextView
+        android:id="@+id/boxLowEdit"
+        android:layout_width="20dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="15dp"
+        android:background="@drawable/green_radius_bg"
+        app:layout_constraintStart_toEndOf="@+id/boxMediumEdit"
+        app:layout_constraintTop_toBottomOf="@+id/tvPriorityEdit" />
 
     <TextView
         android:id="@+id/tvCancelEdit"
@@ -75,7 +89,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/tvEdit"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etTitle"
+        app:layout_constraintTop_toBottomOf="@+id/etTitleEdit"
         tools:ignore="TextContrastCheck" />
 
     <TextView
@@ -86,21 +100,11 @@
         android:layout_marginEnd="40dp"
         android:layout_marginBottom="30dp"
         android:fontFamily="sans-serif-medium"
-        android:text="@string/add"
+        android:text="@string/edit"
         android:textAllCaps="true"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etTitle" />
-
-    <TextView
-        android:id="@+id/boxHigh"
-        android:layout_width="20dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="15dp"
-        android:background="@drawable/red_radius_bg"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvPriority" />
+        app:layout_constraintTop_toBottomOf="@+id/etTitleEdit" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
